add model classes from groundzero